workshop04/wordpress/wp-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deploy
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-pod
  template:
    metadata:
      labels:
        app: wp-pod
    spec:
      volumes:
      - name: wp-vol
        persistentVolumeClaim:
          claimName: wpdb-pvc
      containers:
      - name: wp-container
        image: wordpress
        imagePullPolicy: IfNotPresent
        ports:
        - name: wp-port
          containerPort: 80
        volumeMounts:
        - name: wp-vol
          mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wp-pod
  ports:
  - name: http-port
    port: 80
    targetPort: wp-port
---
