workshop04/wordpress/wp-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    app: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  # LoadBalancer external IP
  # Better to use v1.wp.<ip>.nip.io for serving web apps
  - host: wp.104.248.98.17.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-svc
          servicePort: http-port
